examples/test/testpolicy14850.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14850
  namespace: namespace259
spec:
  podSelector:
    matchLabels:
      key28: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value7
          key0: value49
      podSelector:
        matchLabels:
          key43: value48
          key35: value7
